# digiarch

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  bump.fish  mypy.ini  pyproject.toml
.circleci/: check_version.sh  config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  implementation.md  infrastructure.md  investigation.md
.github/workflows/: build.yml  deploy.yml  get_changelog.py  stale.yml  tag.yml  test.yml  tests.yml
digiarch/: __init__.py  cli.py  common.py  completions.py  data.py  database.py  doctor.py  exceptions.py  history.py  identify.py  internals.py  query.py  search.py  upgrade.py
digiarch/_config/: conversion_map.json
digiarch/_data/: blacklist.json  ext_map.json
digiarch/commands/: cmd_import.py  completions.py  doctor.py  help.py  history.py  identify.py  info.py  init.py  log.py  manual.py  search.py  upgrade.py
digiarch/commands/edit/: action.py  common.py  edit.py  lock.py  processed.py  remove.py  rename.py  rollback.py
digiarch/commands/extract/: extract.py
digiarch/commands/extract/extractors/: base.py  extractor_msg.py  extractor_patool.py  extractor_tnef.py  extractor_webarchive.py  extractor_zip.py
digiarch/commands/finalize/: doc_collections.py  finalize.py
digiarch/core/: ArchiveFileRel.py  __init__.py  checksums.py  custom_sigs.json  dir_walk.py  fix_file_exts.py  identify_files.py  is_binary_test_func.py  path_utils.py  utils.py
digiarch/database/: db.py
digiarch/edit/: action.py  common.py  edit.py  lock.py  remove.py  rename.py  rollback.py
digiarch/extract/: extract.py
digiarch/extract/extractors/: base.py  extract_patool.py  extract_zip.py  extractor_msg.py  extractor_patool.py  extractor_tnef.py  extractor_zip.py
digiarch/identify/: checksums.py  identify.py  identify_files.py  reports.py
digiarch/models/: file_data.py  metadata.py
digiarch/utils/: exceptions.py  fix_file_exts.py  group_files.py  path_utils.py
digital_archive/: __init__.py  console.py  data.py  digiarch.py  file_stats.py  filestats.py
digital_archive/identify/: identify_files.py  reports.py
digital_archive/utils/: click_utils.py  path_utils.py
docs/: README.md  branch_diagram.xml  conf.py  index.rst  readthedocs.yml  requirements.txt
docs/source/: conf.py  datautils.rst  digiarch.rst  exceptions.rst  identify.rst  index.rst  utils.rst
src/digiarch/: common.py  query.py
src/digiarch/commands/: completions.py  help.py  identify.py  info.py  init.py  log.py  manual.py  search.py  upgrade.py
src/digiarch/commands/edit/: action.py  common.py  lock.py  processed.py  puid.py  remove.py  rename.py  rollback.py
src/digiarch/commands/extract/: extract.py
src/digiarch/commands/extract/extractors/: base.py  extractor_msg.py  extractor_patool.py  extractor_tnef.py  extractor_webarchive.py
src/digiarch/commands/finalize/: doc_collections.py  doc_index.py  finalize.py
tests/: .gitignore  conftest.py  custom_signatures.yml  fileformats.yml  test_cli.py  test_completions.py  test_console.py  test_data.py  test_digiarch.py  test_digital_archive.py  test_edit.py  test_extract.py  test_file_stats.py  test_filestats.py  test_finalize.py  test_help.py  test_identify.py  test_init.py  test_internals.py  test_log.py  test_manual.py  test_rollback.py  test_search.py  test_upgrade.py
tests/AVID/Documents/: .gitignore.tif  favicon.tif  file.tif
tests/AVID/MasterDocuments/: corrupt.gif.txt  file.dat.txt
tests/AVID/OriginalDocuments/: message2.msg
tests/AVID/OriginalDocuments/_metadata/: files.db
tests/AVID/_metadata/: avid.db
tests/_data/: adx_test.adx  docx_test.docx
tests/_data/AARS.test_data/: Python_wiki.docx  xls_test.xls
tests/core/: test_archive_file_rel.py  test_checksums.py  test_fix_file_exts.py  test_identify_files.py  test_path_utils.py  test_utils.py
tests/database/: test_database.py
tests/files/: .gitignore  extract.tar  message.msg  message3.msg  message4.eml  table1.xsd
tests/files/_metadata/: files.db
tests/identify/: test_checksums.py  test_group_files.py  test_identify_files.py  test_reports.py
tests/reference_files/: pronom.sig
tests/results/: pytest.xml
tests/results/pytest/: test_report.xml
tests/utils/: test_fix_file_exts.py  test_group_files.py  test_path_utils.py
