[tool.poetry]
name = "digiarch"
version = "1.0.2"
description = "Tools for the Digital Archive Project at Aarhus Stadsarkiv"
authors = ["Aryan Muhammadi Landi <arml@aarhus.dk>", "Nina Jensen <jnik@aarhus.dk>", "Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://stadsarkiv.aarhus.dk/"
repository = "https://github.com/aarhusstadsarkiv/digiarch"
keywords = ["archiving", "preservation", "identification"]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.9"
acacore = {git = "https://github.com/aarhusstadsarkiv/acacore.git", tag = "v1.1.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.1"
ruff = "^0.0.272"
coverage = "^7.2.7"

[tool.poetry.scripts]
digiarch = "digiarch.cli:app"

[tool.black]
line-length = 120
exclude = ".venv"

[tool.ruff]
line-length = 120
select = [
    "C",
    "E",
    "F",
    "W",
    # "B", Will ask for some refactoring of error handling
    "I",
    # "C90", Checks for complexity, might be good but not essential
    # "N", Will force us to redo the naming of several functions
    "D",
    "UP",
    "YTT",
    "ANN",
    # "S", Will help us have secure calls to sub.process and such, might be good
    "BLE",
    # "FBT", Will asks us to remove boolean flags
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLE",
    # "PLR", Will suggest several large refactoring
    "PLW",
    # "TRY", Will help with our exception handling
    "RUF",
]
ignore = [
    "E501",    # line to long, to many false positives, gets handled by black
    "ANN002",  # missing type anottation for *args
    "ANN003",  # missing type anotation for **kwargs
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "ANN201",  # missing return type
    "ANN202",  # missing return type
    "ANN206",  # missing return type
    "ARG001",  # missing type anotattion for args
    "BLE001",  # catching general exceptions
    "D100",    # missing docstring
    "D101",    # missing docstring
    "D102",    # missing docstring
    "D103",    # missing docstring,
    "D104",    # missing docstring,
    "D105",    # missing docstring in magic method,
    "D106",    # missing docstring in nested class,
    "D107",    # missing docstring in __init__,
    "D203",    # 0 blank line required before class docstring,
    "D204",    # 1 blank line required after class docstring,
    "D212",    # multi-line docstring summary should start at the first line,
    "D213",    # multi-line docstring summary should start at the second line,
    "D300",    # use triple docstring
    "E712",    # comparison to True/False, we ignore because we use sqlalchemy
    "FBT001",  # boolean arguement in function definition
    "N802",    # name of function should be lower case
    "PLR2004", # magic value used in comparison
    "PT012",   # ptest.raises should contain a simple statement
    "RET505",  # unnecessary {branch} after return statement
    "S101",    # use of assert,
    "TRY003",  # avoid using long messages outside exception class
    "UP007",   # not using | in type anotations
    "INP001",  # implicit namespace without __init__ (throws errors in tests)
    "PLW2901", # redefing loop variables
    "C901",    # complexity check
    "ISC001",  # check for implicit concatanation of str on one line, not compatabil with black.
]
exclude = [
    ".venv",
    "env",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    "__init__.py"
]

[tool.ruff.isort]
combine-as-imports = false
force-single-line = true
order-by-type = false

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["pytest.fixture"]

[tool.ruff.pycodestyle]
max-doc-length = 300 # We dont care about length of docstrings

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Because we disallow untyped defs in the main module,
# check_untyped_defs only has an impact in tests/
check_untyped_defs = true
exclude = [
    ".venv/"
]

[[tool.mypy.overrides]]
module = 'digiarch'
disallow_untyped_defs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="strict"
pythonpath = ["."]

